deployment/kubernetes/deployment.yml
apiVersion: extensions/v1beta1 
kind: Deployment 
metadata: 
  name: crds-contact
  namespace: api
spec: 
  replicas: 2 
  strategy: 
    type: RollingUpdate 
    rollingUpdate: 
      maxSurge: 2 
      maxUnavailable: 0 
  template: 
    metadata: 
      labels: 
        app: crds-contact
    spec:
      containers: 
        - name: crds-contact
          image: crdschurch/crds-service-contact:$DOCKER_TAG 
          imagePullPolicy: Always 
          ports: 
            - containerPort: 5050 
          resources: 
            limits: 
              memory: "512Mi" 
              cpu: "700m" 
            requests: 
              memory: "16Mi" 
              cpu: "100m"
