deployment/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: contact-api-ingress
  namespace: api
  annotations:
    ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - $API_HOST_NAME
    secretName: crossroads-ssl
  rules:
  - host: $API_HOST_NAME
    http:
      paths:
      - path: /contact
        backend:
          serviceName: crds-contact-service
          servicePort: 80
